--- a/UmbracoDiff/MainWindow.xaml
+++ b/UmbracoDiff/MainWindow.xaml
@@ -1,8 +1,9 @@
-﻿<Window x:Class="UmbracoCompare.MainWindow"
+﻿<controls:MetroWindow x:Class="UmbracoCompare.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         Title="Umbraco CMS Database Diff Utility" Height="400" Width="800">
     <Grid>
         <Grid.RowDefinitions>
@@ -129,6 +130,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</Window>
-
-    
+</controls:MetroWindow>
