--- a/UmbracoDiff/Views/Screens/CompareScreenView.xaml
+++ b/UmbracoDiff/Views/Screens/CompareScreenView.xaml
@@ -1,10 +1,9 @@
-﻿<controls:MetroWindow x:Class="UmbracoCompare.MainWindow"
+﻿<UserControl x:Class="UmbracoDiff.Views.Screens.CompareScreenView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Umbraco CMS Database Diff Utility" Height="400" Width="800">
+        Height="400" Width="800">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
@@ -130,4 +129,4 @@
             </TabItem>
         </TabControl>
     </Grid>
-</controls:MetroWindow>
+</UserControl>
