--- a/UmbracoDiff/Views/AppView.xaml
+++ b/UmbracoDiff/Views/AppView.xaml
@@ -1,9 +1,16 @@
-﻿<controls:MetroWindow x:Class="UmbracoDiff.Views.AppView"
+﻿<Controls:MetroWindow 
+        x:Class="UmbracoDiff.Views.AppView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="Umbraco CMS Database Diff Utility" Height="300" Width="300">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        WindowStartupLocation="CenterScreen"
+        Height="600" Width="1000">
+    <Controls:MetroWindow.RightWindowCommands>
+        <Controls:WindowCommands>
+            <Button Content="Settings"></Button>
+        </Controls:WindowCommands>
+    </Controls:MetroWindow.RightWindowCommands>
     <Grid>
-        
+        <ContentControl x:Name="ActiveItem" />
     </Grid>
-</controls:MetroWindow>
+</Controls:MetroWindow>
