--- a/UmbracoDiff/Views/AppView.xaml
+++ b/UmbracoDiff/Views/AppView.xaml
@@ -4,13 +4,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         WindowStartupLocation="CenterScreen"
+        BorderBrush="{DynamicResource AccentColorBrush}"
         Height="600" Width="1000">
-    <Controls:MetroWindow.RightWindowCommands>
-        <Controls:WindowCommands>
-            <Button Content="Settings"></Button>
-        </Controls:WindowCommands>
-    </Controls:MetroWindow.RightWindowCommands>
+
     <Grid>
-        <ContentControl x:Name="ActiveItem" />
+        <TabControl x:Name="Items" />
     </Grid>
 </Controls:MetroWindow>
