--- a/UmbracoDiff/Views/Settings/UmbracoConnectionView.xaml
+++ b/UmbracoDiff/Views/Settings/UmbracoConnectionView.xaml
@@ -2,14 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel Orientation="Horizontal">
-        <TextBlock Text="Name:" />
-        <TextBox x:Name="Name" />
+    <Expander Header="{Binding Header}">
+        <StackPanel Orientation="Vertical">
+            <TextBox x:Name="Name" Margin="10" controls:TextboxHelper.Watermark="Name ..." />
+            <TextBox x:Name="ConnectionString" Margin="10" controls:TextboxHelper.Watermark="Connection String ..." />
+            <Button x:Name="Save" Margin="15" Content="Save" />
+        </StackPanel>
+    </Expander>
 
-        <TextBlock Text="Connection String:" />
-        <TextBox x:Name="ConnectionString" />
-    </StackPanel>
 </UserControl>
