--- a/UmbracoDiff/Views/Screens/CompareScreenView.xaml
+++ b/UmbracoDiff/Views/Screens/CompareScreenView.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -12,10 +13,24 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
                 <TextBlock MinWidth="135" TextAlignment="Right" Margin="5">Left Connection String:</TextBlock>
+                <ComboBox x:Name="LeftConnections" cal:Message.Attach="[Event SelectionChanged] = [Action LeftItemChanged()]">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <TextBox Name="ConnectionString1TextBox" Width="572"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock MinWidth="135" TextAlignment="Right" Margin="5">Right Connection String:</TextBlock>
+                <ComboBox x:Name="RightConnections">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
                 <TextBox Name="ConnectionString2TextBox" Width="572"></TextBox>
             </StackPanel>
             <Button Content="Compare" Click="Button_Click"></Button>
