--- a/UmbracoDiff/Views/Settings/UmbracoConnectionView.xaml
+++ b/UmbracoDiff/Views/Settings/UmbracoConnectionView.xaml
@@ -6,7 +6,7 @@
              xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Expander Header="{Binding Header}">
+    <Expander Header="{Binding Header}" IsExpanded="{Binding IsExpanded}">
         <StackPanel Orientation="Vertical">
             <TextBox x:Name="Name" Margin="10" controls:TextboxHelper.Watermark="Name ..." />
             <TextBox x:Name="ConnectionString" Margin="10" controls:TextboxHelper.Watermark="Connection String ..." />
