--- a/UmbracoDiff/Views/CompareTabs/DataTypeTabView.xaml
+++ b/UmbracoDiff/Views/CompareTabs/DataTypeTabView.xaml
@@ -5,7 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Column="0"
+                          Name="OutputDataTypesLeft"
+                          AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Only On Left" MinWidth="100" Width="SizeToCells" Binding="{Binding Text,Mode=OneWay}">
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <DataGrid Grid.Column="1"
+                          Name="OutputDataTypesRight"
+                          AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Only On Right" MinWidth="100" Width="SizeToCells" Binding="{Binding Text,Mode=OneWay}">
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
