--- a/UmbracoDiff/Views/CompareTabs/DocTypeTabView.xaml
+++ b/UmbracoDiff/Views/CompareTabs/DocTypeTabView.xaml
@@ -5,7 +5,58 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <DataGrid Grid.Column="0"
+                          Name="OutputDocTypesLeft"
+                          AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Only On Left" MinWidth="150" Width="SizeToCells" Binding="{Binding Text,Mode=OneWay}">
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <DataGrid Grid.Row="0" SelectedCellsChanged="OutputDocTypesMismatched_SelectedCellsChanged"
+                                Name="OutputDocTypesMismatched"
+                                AutoGenerateColumns="False" CanUserAddRows="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Mismatched Properties" MinWidth="150" Width="SizeToCells" Binding="{Binding Name,Mode=OneWay}">
+                    </DataGridTextColumn>
+                </DataGrid.Columns>
+            </DataGrid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <DataGrid Grid.Column="0" SelectedCellsChanged="OutputDocTypesMismatchedDetail_OnSelectedCellsChanged"
+                                      LoadingRow="OutputDocTypesMismatchedDetail_LoadingRow"
+                                Name="OutputDocTypesMismatchedDetail"
+                                AutoGenerateColumns="False" CanUserAddRows="False">
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Left Properties" MinWidth="100" Width="SizeToCells" Binding="{Binding Left.Name,Mode=OneWay}">
+
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Right Properties" MinWidth="100" Width="SizeToCells" Binding="{Binding Right.Name,Mode=OneWay}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </Grid>
+        </Grid>
+        <DataGrid Grid.Column="2"
+                          Name="OutputDocTypesRight"
+                          AutoGenerateColumns="False" CanUserAddRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Only On Right" MinWidth="150" Width="SizeToCells" Binding="{Binding Text,Mode=OneWay}">
+                </DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
     </Grid>
 </UserControl>
