--- a/UmbracoDiff/Views/CompareTabs/DocTypeTabView.xaml
+++ b/UmbracoDiff/Views/CompareTabs/DocTypeTabView.xaml
@@ -2,7 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid >
@@ -24,7 +25,7 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <DataGrid Grid.Row="0" SelectedCellsChanged="OutputDocTypesMismatched_SelectedCellsChanged"
+            <DataGrid Grid.Row="0" cal:Message.Attach="[Event SelectedCellsChanged] =[Action MismatchedItemsSelectionChanged]" 
                                 Name="OutputDocTypesMismatched"
                                 AutoGenerateColumns="False" CanUserAddRows="False">
                 <DataGrid.Columns>
@@ -36,8 +37,8 @@
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <DataGrid Grid.Column="0" SelectedCellsChanged="OutputDocTypesMismatchedDetail_OnSelectedCellsChanged"
-                                      LoadingRow="OutputDocTypesMismatchedDetail_LoadingRow"
+                <DataGrid Grid.Column="0" 
+                          cal:Message.Attach="[Event SelectedCellsChanged] =[Action MismatchedDetailSelectionChanged]; [Event LoadingRow] =[Action MismatchedDetailLoadingRow]"
                                 Name="OutputDocTypesMismatchedDetail"
                                 AutoGenerateColumns="False" CanUserAddRows="False">
                     <DataGrid.Columns>
